Add mybatis-boost-all and mybatis-boost-test

--- a/mybatis-boost-core/pom.xml
+++ b/mybatis-boost-core/pom.xml
@@ -20,12 +20,11 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
         </dependency>
     </dependencies>
 </project>
