--- a/mybatis-boost-limiter/pom.xml
+++ b/mybatis-boost-limiter/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <optional>true</optional>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
