--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mybatis-boost-mapper</artifactId>
+    <artifactId>mybatis-boost-all</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,9 +18,12 @@
             <artifactId>mybatis-boost-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <scope>provided</scope>
+            <groupId>me.rfprojects</groupId>
+            <artifactId>mybatis-boost-mapper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.rfprojects</groupId>
+            <artifactId>mybatis-boost-limiter</artifactId>
         </dependency>
     </dependencies>
 </project>
