--- a/mybatis-boost-spring-boot-autoconfigure/pom.xml
+++ b/mybatis-boost-spring-boot-autoconfigure/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mybatis-boost-test</artifactId>
+    <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
 
     <dependencyManagement>
         <dependencies>
@@ -26,36 +26,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-mapper</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-limiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>me.rfprojects</groupId>
+            <artifactId>mybatis-boost-all</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
