--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>mybatis-boost-limiter</module>
         <module>mybatis-boost-all</module>
         <module>mybatis-boost-test</module>
+        <module>mybatis-boost-spring-boot-autoconfigure</module>
+        <module>mybatis-boost-spring-boot-starter</module>
     </modules>
 
     <properties>
@@ -23,6 +25,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>me.rfprojects</groupId>
+                <artifactId>mybatis-boost-all</artifactId>
+                <version>${version}</version>
+            </dependency>
             <dependency>
                 <groupId>me.rfprojects</groupId>
                 <artifactId>mybatis-boost-core</artifactId>
@@ -36,6 +43,16 @@
             <dependency>
                 <groupId>me.rfprojects</groupId>
                 <artifactId>mybatis-boost-limiter</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>me.rfprojects</groupId>
+                <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>me.rfprojects</groupId>
+                <artifactId>mybatis-boost-spring-boot-starter</artifactId>
                 <version>${version}</version>
             </dependency>
 
