--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>me.rfprojects</groupId>
+        <groupId>tech.rfprojects.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -14,15 +14,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>me.rfprojects</groupId>
+            <groupId>tech.rfprojects</groupId>
             <artifactId>mybatis-boost-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>me.rfprojects</groupId>
+            <groupId>tech.rfprojects</groupId>
             <artifactId>mybatis-boost-mapper</artifactId>
         </dependency>
         <dependency>
-            <groupId>me.rfprojects</groupId>
+            <groupId>tech.rfprojects</groupId>
             <artifactId>mybatis-boost-limiter</artifactId>
         </dependency>
     </dependencies>
