--- a/mybatis-boost-spring-boot-autoconfigure/pom.xml
+++ b/mybatis-boost-spring-boot-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>me.rfprojects</groupId>
+        <groupId>tech.rfprojects.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -28,9 +28,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>me.rfprojects</groupId>
+            <groupId>tech.rfprojects</groupId>
             <artifactId>mybatis-boost-all</artifactId>
         </dependency>
         <dependency>
