--- a/mybatis-boost-test/pom.xml
+++ b/mybatis-boost-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>me.rfprojects</groupId>
+        <groupId>tech.rfprojects.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -26,18 +26,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-core</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-mapper</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>me.rfprojects</groupId>
-            <artifactId>mybatis-boost-limiter</artifactId>
+            <groupId>tech.rfprojects</groupId>
+            <artifactId>mybatis-boost-spring-boot-starter</artifactId>
             <scope>test</scope>
         </dependency>
 
