--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.rfprojects</groupId>
+    <groupId>tech.rfprojects.mybatisboost</groupId>
     <artifactId>mybatis-boost</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -26,32 +26,32 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>me.rfprojects</groupId>
+                <groupId>tech.rfprojects</groupId>
                 <artifactId>mybatis-boost-all</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>me.rfprojects</groupId>
+                <groupId>tech.rfprojects</groupId>
                 <artifactId>mybatis-boost-core</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>me.rfprojects</groupId>
-                <artifactId>mybatis-boost-mapper</artifactId>
-                <version>${version}</version>
-            </dependency>
-            <dependency>
-                <groupId>me.rfprojects</groupId>
+                <groupId>tech.rfprojects</groupId>
                 <artifactId>mybatis-boost-limiter</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>me.rfprojects</groupId>
+                <groupId>tech.rfprojects</groupId>
+                <artifactId>mybatis-boost-mapper</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>tech.rfprojects</groupId>
                 <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>me.rfprojects</groupId>
+                <groupId>tech.rfprojects</groupId>
                 <artifactId>mybatis-boost-spring-boot-starter</artifactId>
                 <version>${version}</version>
             </dependency>
