--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>tech.rfprojects.mybatisboost</groupId>
+    <groupId>cn.mybatisboost</groupId>
     <artifactId>mybatis-boost</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -27,37 +27,37 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-all</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-core</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-lang</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-limiter</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-metric</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
                 <version>${version}</version>
             </dependency>
             <dependency>
-                <groupId>tech.rfprojects.mybatisboost</groupId>
+                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-spring-boot-starter</artifactId>
                 <version>${version}</version>
             </dependency>
