--- a/mybatis-boost-test/pom.xml
+++ b/mybatis-boost-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>tech.rfprojects.mybatisboost</groupId>
+        <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -26,7 +26,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>tech.rfprojects.mybatisboost</groupId>
+            <groupId>cn.mybatisboost</groupId>
             <artifactId>mybatis-boost-spring-boot-starter</artifactId>
             <scope>test</scope>
         </dependency>
