--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>mybatis-boost-all</artifactId>
