--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.mybatisboost</groupId>
     <artifactId>mybatis-boost</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -21,7 +21,7 @@
     </modules>
 
     <properties>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </properties>
 
     <dependencyManagement>
