--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>mybatis-boost-all</artifactId>
+    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
@@ -39,6 +40,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
