--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,5 @@ language: java
 services: mysql
 before_script:
   - mysql < mybatis-boost-test/src/test/resources/project.sql
+after_success:
+  - mvn clean test jacoco:report coveralls:report
