--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     </modules>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version>1.1.4</version>
     </properties>
 
