--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -7,16 +7,19 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.1.4</version>
+        <version>1.1.5</version>
     </parent>
 
     <artifactId>mybatis-boost-all</artifactId>
-    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
             <groupId>cn.mybatisboost</groupId>
             <artifactId>mybatis-boost-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.mybatisboost</groupId>
+            <artifactId>mybatis-boost-mapper</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.mybatisboost</groupId>
