--- a/mybatis-boost-mapper/pom.xml
+++ b/mybatis-boost-mapper/pom.xml
@@ -10,21 +10,17 @@
         <version>1.1.5</version>
     </parent>
 
-    <artifactId>mybatis-boost-core</artifactId>
+    <artifactId>mybatis-boost-mapper</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>persistence-api</artifactId>
+            <groupId>cn.mybatisboost</groupId>
+            <artifactId>mybatis-boost-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
