--- a/mybatis-boost-all/pom.xml
+++ b/mybatis-boost-all/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
     <packaging>pom</packaging>
 
@@ -33,6 +33,10 @@
         <dependency>
             <groupId>cn.mybatisboost</groupId>
             <artifactId>mybatis-boost-metric</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.mybatisboost</groupId>
+            <artifactId>mybatis-boost-nosql</artifactId>
         </dependency>
     </dependencies>
 
