--- a/mybatis-boost-nosql/pom.xml
+++ b/mybatis-boost-nosql/pom.xml
@@ -2,15 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
-        <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
+        <groupId>cn.mybatisboost</groupId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mybatis-boost-lang</artifactId>
+    <artifactId>mybatis-boost-nosql</artifactId>
 
     <dependencies>
         <dependency>
@@ -21,6 +20,11 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
         </dependency>
     </dependencies>
 </project>
