--- a/mybatis-boost-spring-boot-autoconfigure/pom.xml
+++ b/mybatis-boost-spring-boot-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.2.1</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
@@ -55,6 +55,10 @@
         <dependency>
             <groupId>cn.mybatisboost</groupId>
             <artifactId>mybatis-boost-metric</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.mybatisboost</groupId>
+            <artifactId>mybatis-boost-nosql</artifactId>
         </dependency>
 
         <dependency>
