--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.mybatisboost</groupId>
     <artifactId>mybatis-boost</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>MybatisBoost</name>
@@ -41,6 +41,7 @@
         <module>mybatis-boost-lang</module>
         <module>mybatis-boost-limiter</module>
         <module>mybatis-boost-metric</module>
+        <module>mybatis-boost-nosql</module>
         <module>mybatis-boost-spring-boot-autoconfigure</module>
         <module>mybatis-boost-spring-boot-starter</module>
         <module>mybatis-boost-test</module>
@@ -48,7 +49,6 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version>1.2.1</version>
     </properties>
 
     <dependencyManagement>
@@ -56,42 +56,47 @@
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-all</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-core</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-mapper</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-lang</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-limiter</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-metric</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.mybatisboost</groupId>
+                <artifactId>mybatis-boost-nosql</artifactId>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-spring-boot-starter</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -108,6 +113,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.7</version>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.23.1-GA</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
