--- a/mybatis-boost-core/pom.xml
+++ b/mybatis-boost-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>mybatis-boost-core</artifactId>
@@ -21,6 +21,10 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
