--- a/mybatis-boost-spring-boot-autoconfigure/pom.xml
+++ b/mybatis-boost-spring-boot-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>mybatis-boost-spring-boot-autoconfigure</artifactId>
@@ -39,26 +39,6 @@
         <dependency>
             <groupId>cn.mybatisboost</groupId>
             <artifactId>mybatis-boost-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.mybatisboost</groupId>
-            <artifactId>mybatis-boost-mapper</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.mybatisboost</groupId>
-            <artifactId>mybatis-boost-lang</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.mybatisboost</groupId>
-            <artifactId>mybatis-boost-limiter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.mybatisboost</groupId>
-            <artifactId>mybatis-boost-metric</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.mybatisboost</groupId>
-            <artifactId>mybatis-boost-nosql</artifactId>
         </dependency>
 
         <dependency>
