--- a/mybatis-boost-test/pom.xml
+++ b/mybatis-boost-test/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>cn.mybatisboost</groupId>
         <artifactId>mybatis-boost</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>mybatis-boost-test</artifactId>
