--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.mybatisboost</groupId>
     <artifactId>mybatis-boost</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
 
     <name>MybatisBoost</name>
@@ -35,13 +35,7 @@
     </developers>
 
     <modules>
-        <module>mybatis-boost-all</module>
         <module>mybatis-boost-core</module>
-        <module>mybatis-boost-mapper</module>
-        <module>mybatis-boost-lang</module>
-        <module>mybatis-boost-limiter</module>
-        <module>mybatis-boost-metric</module>
-        <module>mybatis-boost-nosql</module>
         <module>mybatis-boost-spring-boot-autoconfigure</module>
         <module>mybatis-boost-spring-boot-starter</module>
         <module>mybatis-boost-test</module>
@@ -55,37 +49,7 @@
         <dependencies>
             <dependency>
                 <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-all</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
                 <artifactId>mybatis-boost-core</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-mapper</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-lang</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-limiter</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-metric</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>cn.mybatisboost</groupId>
-                <artifactId>mybatis-boost-nosql</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -124,7 +88,6 @@
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.25</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
