--- a/mybatis-boost-test/src/test/resources/application.properties
+++ b/mybatis-boost-test/src/test/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost/test
 spring.datasource.username=root
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatisboost.name-adaptor=cn.mybatisboost.core.adaptor.SnakeCaseNameAdaptor
+mybatisboost.metric.enabled=true
 mybatisboost.show-query=true
 mybatisboost.show-query-with-parameters=true
