--- a/mybatis-boost-spring-boot-autoconfigure/pom.xml
+++ b/mybatis-boost-spring-boot-autoconfigure/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>mybatis</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
